--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,13 @@
   --accent-font: var(--font-manrope);
 
   --main-black: #101828;
-  --main-grey: #8e929a;
-  --main-light-blue: #3470ff;
-  --main-blue: #0b44cd;
-  --main-light: #dadde1;
-  --main-white-1: #f2f4f7;
+  --main-grey: #8d929a;
+  --main-button: #3470ff;
+  --main-button-hover: #0b44cd;
+  --main-gray-light: #dadde1;
+  --main-badges: #f2f4f7;
   --main-inputs: #f7f7f7;
-  --main-white-3: #ffffff;
+  --main-white: #ffffff;
 }
 
 *,
@@ -46,7 +46,7 @@ select {
 
 body {
   height: 100%;
-  background-color: var(--main-white-3);
+  background-color: var(--main-white);
   font-family: var(--main-font);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
@@ -54,7 +54,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   font-style: normal;
-  color: var(--main-white-3);
+  color: var(--main-white);
 }
 
 img,
@@ -66,9 +66,9 @@ svg {
 
 button {
   display: inline-block;
-  background-color: var(--main-light-blue);
+  background-color: var(--main-button);
   cursor: pointer;
-  color: var(--main-white-3);
+  color: var(--main-white);
   border-radius: 12px;
   display: flex;
   justify-content: center;
@@ -77,5 +77,5 @@ button {
 
 button:hover,
 button:focus {
-  background-color: var(--main-blue);
+  background-color: var(--main-button-hover);
 }
