--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
   height: 68px;
-  background-color: var(--main-white-1);
+  background-color: var(--main-badges);
   width: 100%;
-  border-bottom: 1px solid var(--main-white-3);
+  border-bottom: 1px solid var(--main-white);
   padding: 24px 120px;
   display: flex;
   justify-content: space-between;
@@ -23,5 +23,5 @@
 }
 
 .active {
-  color: var(--main-blue);
+  color: var(--main-button-hover);
 }
