--- a/src/components/AboutCar/AboutCar.module.css
+++ b/src/components/AboutCar/AboutCar.module.css
@@ -1,3 +1,16 @@
 .wrapper {
+  display: flex;
+  gap: 72px;
   color: var(--main-black);
+  padding: 84px 120px 104px;
+}
+
+.wrapperForm {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.img {
+  border-radius: 19px;
 }
