--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -36,6 +36,7 @@
 }
 
 .fieldWrapper {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,10 +51,11 @@
   background-color: var(--main-inputs);
   color: var(--main-black);
   border-radius: 12px;
+  font-size: 16px;
 }
 
 .field::placeholder {
-  color: var(--main-gray-light);
+  color: var(--main-grey);
 }
 
 .label {
