--- a/src/components/DescriptionCar/DescriptionCar.module.css
+++ b/src/components/DescriptionCar/DescriptionCar.module.css
@@ -11,9 +11,9 @@
 
 .addressWrapper {
   display: flex;
-  gap: 16px;
+  align-items: center;
+  margin-bottom: 16px;
 }
-
 .brand {
   font-weight: 600;
   font-size: 24px;
@@ -21,8 +21,39 @@
   margin-bottom: 8px;
 }
 
+.span {
+  color: var(--main-grey);
+  margin-left: 16px;
+  font-size: 16px;
+}
+
 .address {
-  margin-bottom: 16px;
+  margin-right: 16px;
+}
+
+.rentPrice {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33;
+  color: var(--main-button);
+}
+
+.itemWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.wrapperSvg {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
 
 .description {
@@ -34,8 +65,19 @@
   flex-direction: column;
   gap: 110px;
 }
+
+.conditions {
+  display: flex;
+  flex-direction: column;
+}
+
 .title {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
+  margin-bottom: 22px;
+}
+
+.acc {
+  margin-bottom: 16px;
 }
