--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -29,3 +29,66 @@
   width: 276px;
   height: 44px;
 }
+
+@media (max-width: 1020px) {
+  .title {
+    font-size: 45px;
+    margin-bottom: 12px;
+  }
+
+  .text {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 650px) {
+  .title {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+
+  .text {
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+
+  .btn {
+    width: 136px;
+    height: 44px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 460px) {
+  .title {
+    font-size: 25px;
+    margin-bottom: 7px;
+  }
+
+  .text {
+    font-size: 12px;
+    margin-bottom: 15px;
+  }
+
+  .btn {
+    width: 136px;
+    height: 35px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 380px) {
+  .hero {
+    padding: 0 15px 60px;
+  }
+  .title {
+    font-size: 20px;
+    margin-bottom: 7px;
+  }
+
+  .text {
+    font-size: 10px;
+    margin-bottom: 15px;
+  }
+}
