--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -20,7 +20,7 @@
   width: 100%;
   object-fit: cover;
   border-radius: 14px;
-  height: 268px;
+  height: 276px;
   margin-bottom: 16px;
 }
 
@@ -70,6 +70,55 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 276px;
+  width: 100%;
   height: 44px;
+}
+
+@media (max-width: 1100px) {
+  .itemWrapper {
+    width: 250px;
+  }
+
+  .img {
+    height: auto;
+  }
+
+  .wrapperName {
+    font-size: 12px;
+    margin-bottom: 6px;
+    padding-right: 7px;
+  }
+
+  .wrapperInfo {
+    font-size: 10px;
+    margin-bottom: 2px;
+  }
+
+  .wrapper {
+    gap: 12px;
+  }
+}
+
+@media (max-width: 650px) {
+  .wrapperName {
+    font-size: 10px;
+    margin-bottom: 5px;
+    padding-right: 4px;
+  }
+
+  .wrapperInfo {
+    font-size: 8px;
+  }
+
+  .wrapper {
+    gap: 8px;
+  }
+
+  .btn {
+    height: 36px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 430px) {
 }
