--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -20,12 +20,15 @@
   align-items: flex-start;
 }
 
+.selectWrapper {
+  min-width: 202px;
+}
+
 .input {
   display: flex;
   align-items: center;
   background-color: var(--main-inputs);
   border-radius: 12px;
-  /* padding: 12px 16px; */
   margin-bottom: 0;
 }
 
@@ -45,19 +48,25 @@
   background-color: #f7f7f7;
   border-radius: 12px;
   height: 44px;
+  width: 320px;
+}
+
+.inputWrapper {
+  flex: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .rangeInput {
-  flex: 1;
+  width: 100%;
   border: none;
   font-family: var(--font-manrope);
   background: transparent;
   outline: none;
   color: var(--main-black);
-}
-
-.inputWrapper:first-of-type .rangeInput {
   padding-left: 65px;
+  padding-right: 10px;
 }
 
 .inputWrapper:last-of-type .rangeInput {
@@ -82,4 +91,31 @@
   color: var(--main-black);
   pointer-events: none;
   font-family: var(--font-manrope);
+}
+
+@media (max-width: 1200px) {
+  .form {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .selectWrapper {
+    min-width: 320px;
+  }
+}
+
+@media (max-width: 480px) {
+  .selectWrapper {
+    min-width: 270px;
+  }
+
+  .rangeInputGroup {
+    width: 270px;
+  }
+
+  .btn {
+    font-size: 14px;
+    width: 156px;
+    height: 36px;
+  }
 }
