fix little things

--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -24,6 +24,12 @@
   margin-bottom: 16px;
 }
 
+.name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .icon {
   position: absolute;
   top: 16px;
