--- a/src/components/NotFound/NotFound.module.css
+++ b/src/components/NotFound/NotFound.module.css
@@ -9,18 +9,19 @@
 }
 
 .title {
-  font-size: 96px;
+  font-size: 60px;
   font-weight: bold;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .message {
-  font-size: 24px;
-  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 25px;
+  margin-bottom: 20px;
 }
 
 .homeLink {
-  font-size: 18px;
+  font-size: 20px;
   color: var(--main-button);
   text-decoration: none;
   border: 1px solid var(--main-button);
@@ -32,4 +33,26 @@
 .homeLink:hover {
   background-color: var(--main-button-hover);
   color: white;
+}
+
+@media (max-width: 700px) {
+  .container {
+    padding: 0 15px;
+  }
+
+  .title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+
+  .message {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .homeLink {
+    font-size: 14px;
+    padding: 10px 20px;
+    border-radius: 8px;
+  }
 }
