--- a/src/components/BookingForm/BookingForm.module.css
+++ b/src/components/BookingForm/BookingForm.module.css
@@ -53,6 +53,9 @@
   border-radius: 12px;
   font-size: 16px;
 }
+.textarea {
+  resize: none;
+}
 
 .field::placeholder {
   color: var(--main-grey);
@@ -62,10 +65,6 @@
   margin-bottom: 2px;
   display: flex;
   flex-direction: column;
-}
-
-.inputDatePicker {
-  width: 574px;
 }
 
 .btn {
