--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -39,8 +39,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  /* flex-wrap: wrap;
-  gap: 5px; */
+  align-items: center;
   justify-content: space-between;
   white-space: nowrap;
   color: #000;
